Added updated notebooks

--- a/notebooks/02_train_data_driven_baseline.ipynb
+++ b/notebooks/02_train_data_driven_baseline.ipynb
@@ -2,20 +2,23 @@
   "nbformat": 4,
   "nbformat_minor": 0,
   "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
+    "colab": {"provenance": []},
+    "kernelspec": {"name": "python3", "display_name": "Python 3"}
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 02 — Data-Driven Baseline Neural Network\n",
+        "\n",
+        "Trains a standard feedforward NN on `(t, V) → m(t)` with **no physics prior**.  \n",
+        "Uses an 80/20 train/test split to measure generalization."
+      ]
+    },
+    {
       "cell_type": "code",
+      "metadata": {},
       "source": [
         "import os\n",
         "os.makedirs('outputs', exist_ok=True)\n",
@@ -32,15 +35,34 @@
         "V = data['V']\n",
         "m_true = data['m_true']\n",
         "\n",
-        "print(\"Data loaded!\")\n",
-        "print(f\"   Time points: {len(t)}\")\n",
-        "print(f\"   Training on (t, V) → m(t)\")\n",
+        "# ==================== TRAIN / TEST SPLIT (80/20) ====================\n",
+        "np.random.seed(42)\n",
+        "n = len(t)\n",
+        "idx = np.random.permutation(n)\n",
+        "split = int(0.8 * n)\n",
+        "train_idx, test_idx = idx[:split], idx[split:]\n",
         "\n",
-        "# Prepare tensors\n",
-        "X = torch.tensor(np.stack([t, V], axis=1), dtype=torch.float32)  # shape: (1000, 2)\n",
-        "y = torch.tensor(m_true, dtype=torch.float32).unsqueeze(1)        # shape: (1000, 1)\n",
+        "X_all = np.stack([t, V], axis=1)\n",
         "\n",
-        "# ==================== SIMPLE DATA-DRIVEN NN ====================\n",
+        "X_train = torch.tensor(X_all[train_idx], dtype=torch.float32)\n",
+        "y_train = torch.tensor(m_true[train_idx], dtype=torch.float32).unsqueeze(1)\n",
+        "X_test  = torch.tensor(X_all[test_idx],  dtype=torch.float32)\n",
+        "y_test  = torch.tensor(m_true[test_idx],  dtype=torch.float32).unsqueeze(1)\n",
+        "\n",
+        "print(f'Training samples: {len(train_idx)}')\n",
+        "print(f'Test samples:     {len(test_idx)}')\n",
+        "\n",
+        "# Save split indices for consistency across notebooks\n",
+        "np.savez('data/split_indices.npz', train_idx=train_idx, test_idx=test_idx)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# ==================== DATA-DRIVEN NN ====================\n",
         "class DataDrivenNN(nn.Module):\n",
         "    def __init__(self):\n",
         "        super().__init__()\n",
@@ -55,54 +77,87 @@
         "    def forward(self, x):\n",
         "        return self.net(x)\n",
         "\n",
+        "torch.manual_seed(0)\n",
         "model = DataDrivenNN()\n",
         "criterion = nn.MSELoss()\n",
         "optimizer = optim.Adam(model.parameters(), lr=0.001)\n",
         "\n",
         "# ==================== TRAINING LOOP ====================\n",
         "epochs = 2000\n",
-        "losses = []\n",
+        "train_losses = []\n",
+        "test_losses  = []\n",
         "\n",
-        "print(\"Training data-driven baseline (no physics)...\")\n",
+        "print('Training data-driven baseline (no physics)...')\n",
         "for epoch in range(epochs):\n",
         "    optimizer.zero_grad()\n",
-        "    pred = model(X)\n",
-        "    loss = criterion(pred, y)\n",
+        "    pred = model(X_train)\n",
+        "    loss = criterion(pred, y_train)\n",
         "    loss.backward()\n",
         "    optimizer.step()\n",
         "\n",
-        "    losses.append(loss.item())\n",
+        "    train_losses.append(loss.item())\n",
+        "    with torch.no_grad():\n",
+        "        test_losses.append(criterion(model(X_test), y_test).item())\n",
+        "\n",
         "    if epoch % 400 == 0:\n",
-        "        print(f\"   Epoch {epoch:4d} | Loss: {loss.item():.6f}\")\n",
+        "        print(f'   Epoch {epoch:4d} | Train MSE: {train_losses[-1]:.6f} | Test MSE: {test_losses[-1]:.6f}')\n",
         "\n",
+        "print(f'\\nFinal Train MSE: {train_losses[-1]:.6f}')\n",
+        "print(f'Final Test MSE:  {test_losses[-1]:.6f}')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# ==================== PLOTS ====================\n",
-        "m_pred = model(X).detach().numpy().flatten()\n",
+        "X_full = torch.tensor(X_all, dtype=torch.float32)\n",
+        "m_pred = model(X_full).detach().numpy().flatten()\n",
         "\n",
-        "fig, axs = plt.subplots(2, 1, figsize=(10, 8))\n",
+        "fig, axs = plt.subplots(3, 1, figsize=(10, 10))\n",
         "\n",
         "axs[0].plot(t, V, 'b-', label='Voltage protocol')\n",
         "axs[0].set_ylabel('Voltage (mV)')\n",
-        "axs[0].legend()\n",
-        "axs[0].grid(True)\n",
+        "axs[0].legend(); axs[0].grid(True)\n",
         "\n",
         "axs[1].plot(t, m_true, 'r-', label='True m(t)', linewidth=2)\n",
-        "axs[1].plot(t, m_pred, 'g--', label='Data-driven NN prediction', linewidth=2)\n",
+        "axs[1].plot(t, m_pred, 'g--', label='Data-driven prediction', linewidth=2)\n",
+        "axs[1].scatter(t[test_idx], m_true[test_idx], c='orange', s=8, zorder=5, label='Test points')\n",
         "axs[1].set_xlabel('Time (ms)')\n",
         "axs[1].set_ylabel('Gating variable m(t)')\n",
-        "axs[1].legend()\n",
-        "axs[1].grid(True)\n",
+        "axs[1].legend(); axs[1].grid(True)\n",
+        "\n",
+        "axs[2].plot(train_losses, label='Train Loss')\n",
+        "axs[2].plot(test_losses, label='Test Loss', alpha=0.7)\n",
+        "axs[2].set_xlabel('Epoch'); axs[2].set_ylabel('MSE')\n",
+        "axs[2].legend(); axs[2].grid(True)\n",
         "\n",
         "plt.suptitle('Data-Driven Neural Network Baseline (no physics prior)')\n",
         "plt.tight_layout()\n",
         "plt.savefig('outputs/02_data_driven_baseline.png', dpi=200)\n",
         "plt.show()\n",
-        "\n",
-        "print(\"Training complete! Plot saved to outputs/02_data_driven_baseline.png\")\n",
-        "print(f\"   Final MSE: {losses[-1]:.6f}\")"
+        "print('Plot saved to outputs/02_data_driven_baseline.png')"
       ],
-      "metadata": {
-        "id": "CYiz7HK0ZQQb"
-      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "# ==================== SAVE MODEL + METRICS ====================\n",
+        "torch.save(model.state_dict(), 'outputs/02_data_driven_weights.pt')\n",
+        "\n",
+        "np.savez('outputs/02_metrics.npz',\n",
+        "         train_losses=np.array(train_losses),\n",
+        "         test_losses=np.array(test_losses),\n",
+        "         m_pred_full=m_pred,\n",
+        "         train_idx=train_idx,\n",
+        "         test_idx=test_idx)\n",
+        "print('Model weights and metrics saved.')"
+      ],
       "execution_count": null,
       "outputs": []
     }
